--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^5.6 || ^7.1",
+        "php": "^7.1",
         "friendsofphp/php-cs-fixer": "^2.14"
     },
     "autoload": {
